[metadata]
name = parameterized
author = David Wolever
author_email = david@wolever.net
license = FreeBSD
description = Parameterized testing with any Python test framework
url = https://github.com/wolever/parameterized
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
version = attr: parameterized.__version__

[options]
packages = find:

[options.extras_require]
dev = jinja2

[bdist_wheel]
universal=1
